# libaxb-dev

./: CMakeLists.txt  LICENSE  README.md  ROADMAP.md
cmake/: FindOpenCL.cmake  libaxbCommon.cmake  libaxbConfig.cmake.in
examples/: CMakeLists.txt  vec-axpy.c
include/: libaxb.h
src/: CMakeLists.txt  general.c  mat.c  scalar.c  vec.c
src/backend/: backend.c
src/backend/mem/: cuda.c  cuda.cu  host.c  opencl.c
src/backend/op/: cuda.c  cuda.cu  host.c  opencl.c
src/libaxb/: backend.h  general.h
src/libaxb/backend/: cuda.h  host.h  op.h  opencl.h
tests/: CMakeLists.txt
tests/src/: common.h  mat-sparse-ops.c  vec-axpy.c  vec-ops.c
